--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "module": "true",
   "scripts": {
     "build": "DEBUG=cwe* node ./build/build.js",
     "lint": "eslint . && yarn run lint:lockfile",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --config .prettierrc.js --write '**/*.js'",
     "test": "jest",
-    "test:watch": "jest --watch",
+    "format": "prettier --config .prettierrc.js --write '**/*.js'",
     "coverage:view": "open-cli coverage/lcov-report/index.html",
     "semantic-release": "semantic-release",
     "lint:lockfile": "lockfile-lint --path yarn.lock --validate-https --allowed-hosts npm yarn"
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "debug": "^4.3.3",
-    "fast-xml-parser": "^3.21.0"
+    "fast-xml-parser": "^3.21.0",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.1",
@@ -53,6 +54,7 @@
     "@semantic-release/github": "^5.4.2",
     "@semantic-release/npm": "^5.1.13",
     "@semantic-release/release-notes-generator": "^7.2.1",
+    "@types/jest": "^29.2.3",
     "adm-zip": "^0.4.16",
     "babel-eslint": "^10.0.1",
     "babel-plugin-syntax-async-functions": "^6.13.0",
@@ -68,36 +70,15 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^3.0.0",
-    "jest": "^24.8.0",
+    "jest": "^29.3.1",
     "lint-staged": "^9.2.0",
     "lockfile-lint": "^2.0.1",
     "open-cli": "^5.0.0",
     "prettier": "^1.18.2",
-    "semantic-release": "^15.13.19"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "verbose": true,
-    "notify": true,
-    "collectCoverage": true,
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
-      }
-    },
-    "testPathIgnorePatterns": [
-      "/__tests__/.*/__fixtures__/.*"
-    ],
-    "collectCoverageFrom": [
-      "index.js",
-      "src/**/*.{js,ts}"
-    ],
-    "testMatch": [
-      "**/*.test.js"
-    ]
+    "quicktype": "^15.1.0",
+    "semantic-release": "^15.13.19",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1"
   },
   "husky": {
     "hooks": {
