--- a/package.json
+++ b/package.json
@@ -84,8 +84,7 @@
     "hooks": {
       "commit-msg": "commitlint --env HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged",
-      "post-merge": "yarn install",
-      "pre-push": "yarn run lint && yarn run test"
+      "post-merge": "yarn install"
     }
   },
   "lint-staged": {
